@@ -1,2 +1,11 @@
-.build
-Acme-Time-Constant-*
+/.build
+/Acme-Time-Constant-*
+/tmp/
+/META.json
+/MYMETA.json
+/META.yml
+/MYMETA.yml
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
