@@ -1,6 +1,9 @@
 Release history for Acme-Time-Constant
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001004, see misc/*.deps* for details
+ - develop: +4 ↑1 (suggests: ↑1)
 
 0.001004 2015-06-23T04:50:45Z f351e75
  [00 Minor]
